--- a/HospitalRegistryData/HospitalRegistryData.csproj
+++ b/HospitalRegistryData/HospitalRegistryData.csproj
@@ -51,13 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Doctor.cs" />
+    <Compile Include="Entities\Doctor.cs" />
     <Compile Include="HospitalRegistryContext.cs" />
-    <Compile Include="Patient.cs" />
-    <Compile Include="PatientCardRecord.cs" />
+    <Compile Include="Entities\Patient.cs" />
+    <Compile Include="Entities\PatientCardRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reception.cs" />
-    <Compile Include="Specialization.cs" />
+    <Compile Include="Entities\Reception.cs" />
+    <Compile Include="Entities\Specialization.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
