--- a/HospitalRegistryControllers/HospitalRegistryControllers.csproj
+++ b/HospitalRegistryControllers/HospitalRegistryControllers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C4D7615D-4BEC-4D5B-964F-AFC49AA08ED7}</ProjectGuid>
+    <ProjectGuid>{5671B99A-708C-4930-A8F0-7A8B7941BD53}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HospitalRegistryServices</RootNamespace>
-    <AssemblyName>HospitalRegistryServices</AssemblyName>
+    <RootNamespace>HospitalRegistryControllers</RootNamespace>
+    <AssemblyName>HospitalRegistryControllers</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HospitalRegistryRepositories">
-      <HintPath>..\HospitalRegistryRepositories\bin\Debug\HospitalRegistryRepositories.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,18 +40,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PatientCardService.cs" />
-    <Compile Include="PatientService.cs" />
+    <Compile Include="DoctorsController.cs" />
+    <Compile Include="DoctorSearchController.cs" />
+    <Compile Include="MainController.cs" />
+    <Compile Include="PatientCardController.cs" />
+    <Compile Include="PatientController.cs" />
+    <Compile Include="PatientSearchController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScheduleController.cs" />
+    <Compile Include="SpecializationsController.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HospitalRegistryData\HospitalRegistryData.csproj">
-      <Project>{7A4DAF72-F5AB-438A-AF43-92CB823E11CC}</Project>
-      <Name>HospitalRegistryData</Name>
+    <ProjectReference Include="..\Controllers\Controllers.csproj">
+      <Project>{D7A71005-02F8-4560-89D1-095ACFE192DA}</Project>
+      <Name>Controllers</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Repositories\Repositories.csproj">
-      <Project>{AA8D73C6-FF45-4FF1-8D3E-03E601D96DD9}</Project>
-      <Name>Repositories</Name>
+    <ProjectReference Include="..\HospitalRegistryServices\HospitalRegistryServices.csproj">
+      <Project>{C4D7615D-4BEC-4D5B-964F-AFC49AA08ED7}</Project>
+      <Name>HospitalRegistryServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Views\Views.csproj">
+      <Project>{31C38D3B-EB42-4E97-9B83-BE17BC36908D}</Project>
+      <Name>Views</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
