--- a/HospitalRegistryServices/HospitalRegistryServices.csproj
+++ b/HospitalRegistryServices/HospitalRegistryServices.csproj
@@ -49,6 +49,7 @@
     <Compile Include="PatientCardService.cs" />
     <Compile Include="PatientService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpecializationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HospitalRegistryData\HospitalRegistryData.csproj">
