--- a/HospitalRegistryServices/HospitalRegistryServices.csproj
+++ b/HospitalRegistryServices/HospitalRegistryServices.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=5.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Bundles">
       <HintPath>..\Bundles\bin\Debug\Bundles.dll</HintPath>
     </Reference>
@@ -46,9 +50,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DoctorService.cs" />
+    <Compile Include="Models\Doctor.cs" />
+    <Compile Include="Models\Patient.cs" />
+    <Compile Include="Models\PatientCardRecord.cs" />
+    <Compile Include="Models\Reception.cs" />
+    <Compile Include="Models\Specialization.cs" />
     <Compile Include="PatientCardService.cs" />
     <Compile Include="PatientService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service.cs" />
     <Compile Include="SpecializationService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -60,6 +71,9 @@
       <Project>{AA8D73C6-FF45-4FF1-8D3E-03E601D96DD9}</Project>
       <Name>Repositories</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
