--- a/HospitalRegistryApp/AppMain.csproj
+++ b/HospitalRegistryApp/AppMain.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5671B99A-708C-4930-A8F0-7A8B7941BD53}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{A45A210D-7D61-4792-A871-55C737C2986B}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HospitalRegistryControllers</RootNamespace>
-    <AssemblyName>HospitalRegistryControllers</AssemblyName>
+    <RootNamespace>HospitalRegistryApp</RootNamespace>
+    <AssemblyName>HospitalRegistryApp</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -34,11 +37,20 @@
       <HintPath>..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,32 +60,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DoctorsController.cs" />
-    <Compile Include="DoctorSearchController.cs" />
-    <Compile Include="MainController.cs" />
-    <Compile Include="PatientCardController.cs" />
-    <Compile Include="PatientController.cs" />
-    <Compile Include="PatientSearchController.cs" />
+    <Compile Include="ControllerModule.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScheduleController.cs" />
-    <Compile Include="SpecializationsController.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Controllers\Controllers.csproj">
-      <Project>{D7A71005-02F8-4560-89D1-095ACFE192DA}</Project>
-      <Name>Controllers</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\HospitalRegistryServices\HospitalRegistryServices.csproj">
-      <Project>{C4D7615D-4BEC-4D5B-964F-AFC49AA08ED7}</Project>
-      <Name>HospitalRegistryServices</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Views\Views.csproj">
-      <Project>{31C38D3B-EB42-4E97-9B83-BE17BC36908D}</Project>
-      <Name>Views</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Controllers\FrameworkControllers.csproj">
+      <Project>{D7A71005-02F8-4560-89D1-095ACFE192DA}</Project>
+      <Name>FrameworkControllers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HospitalRegistryControllers\AppControllers.csproj">
+      <Project>{5671B99A-708C-4930-A8F0-7A8B7941BD53}</Project>
+      <Name>AppControllers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HospitalRegistryData\AppData.csproj">
+      <Project>{7A4DAF72-F5AB-438A-AF43-92CB823E11CC}</Project>
+      <Name>AppData</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HospitalRegistryRepositories\AppRepositories.csproj">
+      <Project>{AF1D53F4-F497-4CB5-BE19-6FD116E8CF0B}</Project>
+      <Name>AppRepositories</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\HospitalRegistryServices\AppServices.csproj">
+      <Project>{c4d7615d-4bec-4d5b-964f-afc49aa08ed7}</Project>
+      <Name>AppServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Repositories\FrameworkRepositories.csproj">
+      <Project>{AA8D73C6-FF45-4FF1-8D3E-03E601D96DD9}</Project>
+      <Name>FrameworkRepositories</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
