--- a/HospitalRegistryControllers/AppControllers.csproj
+++ b/HospitalRegistryControllers/AppControllers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{31C38D3B-EB42-4E97-9B83-BE17BC36908D}</ProjectGuid>
+    <ProjectGuid>{5671B99A-708C-4930-A8F0-7A8B7941BD53}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Views</RootNamespace>
-    <AssemblyName>Views</AssemblyName>
+    <RootNamespace>HospitalRegistryControllers</RootNamespace>
+    <AssemblyName>HospitalRegistryControllers</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=5.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,15 +48,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IView.cs" />
+    <Compile Include="DoctorsController.cs" />
+    <Compile Include="DoctorSearchController.cs" />
+    <Compile Include="MainController.cs" />
+    <Compile Include="PatientCardController.cs" />
+    <Compile Include="PatientController.cs" />
+    <Compile Include="PatientSearchController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View.cs" />
+    <Compile Include="ScheduleController.cs" />
+    <Compile Include="SpecializationsController.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\validators\validators.csproj">
-      <Project>{0DE690CC-29D5-4C05-B226-3F1924F71EF3}</Project>
-      <Name>validators</Name>
+    <ProjectReference Include="..\Controllers\FrameworkControllers.csproj">
+      <Project>{D7A71005-02F8-4560-89D1-095ACFE192DA}</Project>
+      <Name>FrameworkControllers</Name>
     </ProjectReference>
+    <ProjectReference Include="..\HospitalRegistryServices\AppServices.csproj">
+      <Project>{C4D7615D-4BEC-4D5B-964F-AFC49AA08ED7}</Project>
+      <Name>AppServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Views\FrameworkViews.csproj">
+      <Project>{31C38D3B-EB42-4E97-9B83-BE17BC36908D}</Project>
+      <Name>FrameworkViews</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
