--- a/HospitalRegistryRepositories/AppRepositories.csproj
+++ b/HospitalRegistryRepositories/AppRepositories.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D7A71005-02F8-4560-89D1-095ACFE192DA}</ProjectGuid>
+    <ProjectGuid>{AF1D53F4-F497-4CB5-BE19-6FD116E8CF0B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Controllers</RootNamespace>
-    <AssemblyName>Controllers</AssemblyName>
+    <RootNamespace>HospitalRegistryRepositories</RootNamespace>
+    <AssemblyName>HospitalRegistryRepositories</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=5.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="HospitalRegistryData">
+      <HintPath>..\HospitalRegistryData\bin\Debug\HospitalRegistryData.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,13 +56,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller.cs" />
+    <Compile Include="implementation\DoctorRepository.cs" />
+    <Compile Include="interfaces\IDoctorRepository.cs" />
+    <Compile Include="interfaces\IPatientCardRecordRepository.cs" />
+    <Compile Include="interfaces\IPatientRepository.cs" />
+    <Compile Include="interfaces\IReceptionRepository.cs" />
+    <Compile Include="interfaces\ISpecializationRepository.cs" />
+    <Compile Include="implementation\PatientCardRecordRepository.cs" />
+    <Compile Include="implementation\PatientRepository.cs" />
+    <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="implementation\ReceptionRepository.cs" />
+    <Compile Include="implementation\SpecializationRepository.cs" />
+    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Views\Views.csproj">
-      <Project>{31C38D3B-EB42-4E97-9B83-BE17BC36908D}</Project>
-      <Name>Views</Name>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Repositories\FrameworkRepositories.csproj">
+      <Project>{AA8D73C6-FF45-4FF1-8D3E-03E601D96DD9}</Project>
+      <Name>FrameworkRepositories</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
